fixed spacing for small media query

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -323,7 +323,7 @@ button:hover{
 @media only screen and (max-width: 450px) {
     #container {
     grid-template-columns: 100%;
-    grid-template-rows: 10% 25% 7% 7% 40.5% 10%;
+    grid-template-rows: 10% 25% 10% 7% 65% 10%;
     justify-items: center;
     }
 }
